syntax = "proto3";

package orders;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders (GetOrdersRequest) returns (stream OrderMessage);
  rpc ChatOrders (stream OrderChatMessage) returns (stream OrderChatMessage);
}

message OrderMessage {
  string id = 1;
  string customer_email = 2;
  double amount = 3;
  string status = 4;
  string notes = 5;
  string created_at = 6;
}

message OrderChatMessage {
  string author = 1;
  string text = 2;
  string order_id = 3;
  string sent_at = 4;
}

message CreateOrderRequest {
  OrderMessage order = 1;
}

message CreateOrderResponse {
  OrderMessage order = 1;
}

message GetOrdersRequest {
  string status = 1;
}
